--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Main Content</h1>
 
     <!-- Include the content of includedContent.jsp -->
-    <jsp:include page="index.jsp" />
+    <jsp:include page="/index.jsp" />
 
     <p>Additional content in the main HTML file.</p>
 </body>
